S5-email (#149)
* refactor userInfo: add uuid and isLocked, add DeletedUser

* add deleted-user-schema.sql and refactor user-info-schema-V5.sql

* refactor register in AuthenticationServiceImpl

* refactor application.properties

* add EmailDefaultProps

* add GlobalControllerAdvice

* add EmailConfig

* add EmailService and dependency

* add ServerInfoConfig

* refactor deleteTalentById, add email

* refactor deleteSponsor, add email account recovery

* add DeleteUsersScheduler

* update properties

* AWS minore update

* update

* sponsor service update

* Requested update: sponsor can see amount of kudos on user account
User restore account now available!

* MERGE UPDATE

* MERGE UPDATE

---------

Co-authored-by: Denis Boyko <denboy973@gmail.com>